--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "homepage": "https://github.com/Jae-as/employee-cms#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "inquirer": "^8.2.5",
     "mysql2": "^2.3.3",
     "sequelize": "^6.28.0"
